[Reports] Add project size and refine composer
